fixed images, changed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html {
   background-image: url("../images/leaf-bg.svg");
   background-size: 64px;
   background-color: #588477;
-  
+
   border-top: 3px solid #2d5a4d;
   border-bottom: 3px solid #2d5a4d;
 }
@@ -31,7 +31,7 @@ html {
 .nav a:hover {
   background-image: url("../images/leaf-icon.svg");
   background-color: #fff;
-  background-position: 0 0 0 .75em;
+  background-position: .75em;
   background-size: 64px;
   background-repeat: no-repeat;
 
@@ -53,7 +53,8 @@ html {
 
   background-image: url("../images/two-leaves.svg");
   background-repeat: no-repeat;
-  background-size: 6.25em;
+  background-size: 5.75em;
+  background-position: .5em 0;
 }
 
 @media only screen and (min-width: 60em) {
@@ -65,5 +66,4 @@ html {
   .nav {
     text-align: right;
   }
-
-}
+  
